correct the codes for US1

--- a/src/configuration.properties
+++ b/src/configuration.properties
@@ -1,8 +1,8 @@
 browser=chrome
 amazon_url=https://www.amazon.com
 amazon_title=Amazon.com. Spend less. Smile more.
-valid_email=kayayse1987@gmail.com
-valid_password=Necip87,
+valid_email=fake67@gmail.com
+valid_password=fake23445
 invalid_email=12gmail.co
 invalid_password=12345
 amazon_uk_url=https://www.amazon.co.uk
